css style home bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <label>sapient college</label>
+        <label class="logo">sapient college</label>
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="">contact</a></li>
